dons_tests/valid_kxi/this_in_nonstatic_dec.kxi
class MyClass {
    private int x = 4;
    private int y = this.x + 1;
}
void main(){}
