dons_tests/invalid_kxi/this_in_static_dec.kxi
class MyClass {
    private int x = 4;
    static private int y = this.x + 1;
}
void main(){}
